# mastermind-twich

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  game.py  pyproject.toml  requirements.txt  twitch-bot.py
src/: mastermind.py  twitch-bot.py
tests/: test_mastermind.py
