[project]
name = "mastermind-twitch"
version = "0.2.0"
description = "Mastermind game for twitch chat"
authors = [{name = "Walfask"}]
readme = "README.md"
license = "MIT"

dependencies = [
    "twitchio==2.10.0",
    "python-dotenv==1.0.1",
]
requires-python = ">=3.13"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pre-commit = "^3.3.3"

[project.optional-dependencies]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.7.2",
]
test = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 120
fixable = ["ALL"]

src = ["src"]
